Expose security clear cache paths explicitly
This PR adds explicit routes for the optional path parameters for the
various security clear cache api's.

This follows an already established pattern of other api's taking
optional path parameters.